thesis: Add discussion on trustworthiness

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -524,3 +524,11 @@
     url = {https://github.com/SymbioticEDA/riscv-formal},
     urldate = {06 November 2019},
 }
+
+@Online{Piano,
+    title = {The Piano Test for Program Verification},
+    author = {Regehr, John},
+    date = {27 January 2011},
+    url = {https://blog.regehr.org/archives/364},
+    urldate = {27 November 2019},
+}
