thesis: First draft of related work

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -532,3 +532,65 @@
     url = {https://blog.regehr.org/archives/364},
     urldate = {27 November 2019},
 }
+
+@inproceedings{GordonKPGNR15,
+  author    = {Michael I. Gordon and
+               Deokhwan Kim and
+               Jeff H. Perkins and
+               Limei Gilham and
+               Nguyen Nguyen and
+               Martin C. Rinard},
+  title     = {Information Flow Analysis of Android Applications in DroidSafe},
+  booktitle = {{NDSS}},
+  publisher = {The Internet Society},
+  year      = {2015}
+}
+
+@inproceedings{SuhLZD04,
+  author    = {G. Edward Suh and
+               Jae W. Lee and
+               David Zhang and
+               Srinivas Devadas},
+  title     = {Secure program execution via dynamic information flow tracking},
+  booktitle = {{ASPLOS}},
+  pages     = {85--96},
+  publisher = {{ACM}},
+  year      = {2004}
+}
+
+@techreport{Fox02,
+    author = {Fox, A.C.J.},
+    title = {Formal Verification of the ARM6 micro-architecture},
+    institution = {University of Cambridge},
+    number = {548},
+    year = {2002},
+}
+
+@inproceedings{BradfieldS16,
+  author    = {Chris Bradfield and
+               Cynthia Sturton},
+  title     = {Model checking to find vulnerabilities in an instruction set architecture},
+  booktitle = {{HOST}},
+  pages     = {109--113},
+  publisher = {{IEEE} Computer Society},
+  year      = {2016}
+}
+
+@inproceedings{Nienhuis19,
+  title={Rigorous engineering for hardware security: formal modelling and proof in the CHERI design and implementation process},
+  author={Kyndylan Nienhuis and Alexandre Joannou and Anthony Fox and Michael Roe and Thomas Bauerei{\ss} and Brian Campbell and Matthew Naylor and Robert M. Norton and Simon W. Moore and Peter G. Neumann and Ian David Bede Stark and Robert N. M. Watson and Peter Sewell},
+  year={2019}
+}
+
+@inproceedings{KhakpourSD13,
+  author    = {Narges Khakpour and
+               Oliver Schwarz and
+               Mads Dam},
+  title     = {Machine Assisted Proof of ARMv7 Instruction Level Isolation Properties},
+  booktitle = {{CPP}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {8307},
+  pages     = {276--291},
+  publisher = {Springer},
+  year      = {2013}
+}
