thesis: Add related work discussion of Bradfield, Sturton

--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -266,6 +266,7 @@ While it would be sufficient to find a stronger precondition for these assumptio
 This topic, though, can't be handled as part of this thesis leading to future work.
 
 \subsection{Trustworthiness}
+\label{sec:trustworthiness}
 
 Verification processes must not be arbitrary.
 The core of verification is to enhance the trust in a given system.
