thesis: Finish conclusion

--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -328,6 +328,7 @@ But it is unclear
 We mark this problem as future work.
 
 \subsection{General Observations}
+\label{sec:discuss-observations}
 
 \subsubsection{Abstract Model}
 
