--- a/thesis/sections/related.tex
+++ b/thesis/sections/related.tex
@@ -93,6 +93,7 @@ The development of CHERI was accompanied by formal methods and proofs to enhance
 The CHERI architecture is an attempt to equip an architecture with strong mechanisms of controlling information flow such that the trust in it is very high from the beginning, supported by formal proofs that certain desirable properties hold for this architecture.
 
 \subsection{Model Checking Instruction Set Architectures}
+\label{sec:related-model-checking}
 
 The work of \citeauthor{BradfieldS16} in \citetitle{BradfieldS16} \cite{BradfieldS16} comes closest to what has been attempted in this thesis.
 On the high level, \citeauthor{BradfieldS16} also attempt to verify an \gls{isa} and also use model checking to do so.
