--- a/thesis/sections/checking.tex
+++ b/thesis/sections/checking.tex
@@ -20,7 +20,7 @@ How do we refine the model and/or properties on a verification failure?
 \subsubsection{Properties}
 \label{sec:props}
 
-% TODO: Explain syntax and assumptions of LTL properties
+% TODO: Explain syntax and assumptions of \gls{ltl} properties
 
 In the summary of section \ref{sec:ifc-model} we mentioned that there are some arguments to the information flow semantic functions in $ \I $ that are not used to determine the information flow label of some architectural word.
 These induce the first properties we will verify the MINRV8 architecture against.
