--- a/thesis/sections/conclusion.tex
+++ b/thesis/sections/conclusion.tex
@@ -77,7 +77,7 @@ Finally, we give an outlook on future work:
 \begin{description}
     \item[Executable memory] First and foremost, the model could be enhanced by a model of executable memory to more closely model modern architectures.
     This was discussed extensively in section \ref{sec:discuss-arch}.
-    \item[MMU] In light of \cite{KhakpourSD13} a model of an MMU could be implemented to make use of information flow tracking on user-mode level.
+    \item[MMU] In light of \cite{KhakpourSD13} a model of an \gls{mmu} could be implemented to make use of information flow tracking on user-mode level.
     This was discussed in section \ref{sec:related-work}.
     \item[Machine-generated model] The model of the architecture that was implemented by hand in this thesis could be generated from existing machine-readable architectural specifications.
     For example, there are machine-readable versions of the \gls{arm} architecture; both \cite{Reid17,Fox02} either used or developed machine-readable specifications that might be used for this endeavor.
