--- a/thesis/sections/risc-v.tex
+++ b/thesis/sections/risc-v.tex
@@ -632,7 +632,7 @@ Therefore - if full control over the transition relation is desired - it often i
     \end{lstlisting}
 
     Now, whenever \smv{ri} is not equal to the respective index, \smv{r1} (or \smv{r2}) will be stable.
-    With this implementation, nuXmv fails to find a counter-example for the two LTL properties.
+    With this implementation, nuXmv fails to find a counter-example for the two \gls{ltl} properties.
 \end{example}
 
 % TODO: What is SMV?
