--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -138,6 +138,7 @@
 \newacronym{api}{API}{application programming interface}
 \newacronym{bdd}{BDD}{boolean decision diagram}
 \newacronym{psl}{PSL}{property specification language}
+\newacronym{mmu}{MMU}{memory management unit}
 
 \newacronym{jal}{\rv{Jal}}{jump and link}
 \newacronym{jalr}{\rv{Jalr}}{jump and link register}
