--- a/thesis/outline.tex
+++ b/thesis/outline.tex
@@ -64,7 +64,7 @@ We will use the base integer instruction set, the standard extension for user-le
 nuXmv \cite{Cavada14} is a symbolic model checker a predecessor of which was introduced in \textit{NuSMV: A New Symbolic Model Checker} \cite{Cimatti2000}.
 nuXmv extends NuSMV with new data types being integers and reals and enhances on its SMT-based model checking techniques.
 
-nuXmv can check linear temporal logic (LTL) formulas, computational tree logic (CTL) formulas, invariants and property specification language (PSL) formulas for unbounded models.
+nuXmv can check \gls{ltl} formulas, \gls{ctl} formulas, invariants and \gls{psl} formulas for unbounded models.
 An example of such a model is given in snippet \ref{snpt:nuxmv}.
 The input language to nuXmv knows modules as the highest tier language objects.
 An entry point to a nuXmv file is given by the module called \texttt{main}.
@@ -108,7 +108,7 @@ nuXmv will try to prove that each specified formula (in this case an invariant) 
 \end{lstlisting}
 
 We will use nuXmv to describe the model we want to check the information flow for.
-We will build a custom model of the RISC-V architecture in the nuXmv input language and phrase properties about information flow for this model in either LTL, CTL or as invariants.
+We will build a custom model of the RISC-V architecture in the nuXmv input language and phrase properties about information flow for this model in either \gls{ltl}, CTL or as invariants.
 
 \section{Project Plan}
 
